Add open-in API command
